--- a/article/header/packages.tex
+++ b/article/header/packages.tex
@@ -46,6 +46,7 @@
 % Fix overfull hbox in references
 % https://tex.stackexchange.com/questions/171999/overfull-hbox-in-biblatex#comment397014_171999
 \usepackage[final]{microtype}
+\usepackage{xurl}
 
 \usepackage{hyperref}
 \addto\extrasngerman{
