--- a/shared/bibliography.bib
+++ b/shared/bibliography.bib
@@ -26,6 +26,17 @@
   organization = {DEZIBOT}
 }
 
+@software{espressifsystemsEspressifEsptflitemicro2025,
+  title = {Espressif/Esp-Tflite-Micro},
+  author = {{Espressif Systems}},
+  date = {2025-01-27},
+  origdate = {2021-10-25T09:36:22Z},
+  url = {https://github.com/espressif/esp-tflite-micro},
+  urldate = {2025-03-19},
+  organization = {Espressif Systems},
+  version = {1.3.3.1}
+}
+
 @online{espressifsystemsshanghaico.ltdFTMExample2024,
   title = {{{FTM Example}}},
   author = {{Espressif Systems (Shanghai) Co., Ltd}},
@@ -55,11 +66,41 @@
   organization = {Wolles Elektronikkiste}
 }
 
+@software{felttipDezibotAlignmentPointer2025,
+  title = {Dezibot {{Alignment Pointer Needle}}},
+  author = {{felttip}},
+  date = {2025-03-19},
+  url = {https://www.printables.com/model/1235209-dezibot-alignment-pointer-needle},
+  urldate = {2025-03-19},
+  version = {2}
+}
+
 @article{fingerleDokumentationDezibot42025,
   title = {Dokumentation des Dezibot4},
   author = {Fingerle, Chris-Dominik and Wilfer, Estelle Bianca},
   date = {2025-03-10},
   langid = {ngerman}
+}
+
+@software{hyodoToolsConvertONNX2025,
+  title = {Tools to Convert {{ONNX}} Files ({{NCHW}}) to {{TensorFlow}} Format ({{NHWC}})},
+  author = {Hyodo, Katsuya},
+  date = {2025-03-15},
+  origdate = {2022-09-27T00:06:32Z},
+  url = {https://github.com/PINTO0309/onnx2tf},
+  urldate = {2025-03-19},
+  version = {1.27.0}
+}
+
+@software{internationalbusinessmachinescorporationOnnxOnnxtensorflow2022,
+  title = {Onnx/Onnx-Tensorflow},
+  author = {{International Business Machines Corporation} and {LeapMind Inc.}},
+  date = {2022-11-16},
+  origdate = {2017-10-05T21:30:34Z},
+  url = {https://github.com/onnx/onnx-tensorflow},
+  urldate = {2025-03-19},
+  organization = {Open Neural Network Exchange},
+  version = {1.10.0}
 }
 
 @standard{justUSChessFederations2019,
@@ -90,4 +131,24 @@
   url = {https://www.w3.org/TR/2000/WD-AERT-20000426#color-contrast},
   urldate = {2024-10-29},
   pubstate = {prepublished}
+}
+
+@online{scikit-learndevelopers117NeuralNetwork2025,
+  title = {1.17. {{Neural}} Network Models (Supervised)},
+  author = {{scikit-learn developers}},
+  date = {2025-01-23},
+  url = {https://scikit-learn/stable/modules/neural_networks_supervised.html},
+  urldate = {2025-03-19},
+  langid = {english},
+  organization = {scikit-learn}
+}
+
+@software{thetensorflowauthorsTanakamasayukiArduino_TensorFlowLite_ESP322022,
+  title = {Tanakamasayuki/{{Arduino}}\_{{TensorFlowLite}}\_{{ESP32}}},
+  author = {{The TensorFlow Authors}},
+  date = {2022-05-30},
+  origdate = {2020-05-26T13:55:32Z},
+  url = {https://github.com/tanakamasayuki/Arduino_TensorFlowLite_ESP32},
+  urldate = {2025-03-19},
+  version = {1.0.0}
 }
