Add references to mlp jypnb.

--- a/article/content/movement.tex
+++ b/article/content/movement.tex
@@ -396,7 +396,7 @@ Im Weiteren wurde versucht, ein MLP zu trainieren. Die Eingangsdaten basieren au
     \end{bmatrix}
 \end{equation*}
 
-Das Training wurde mit der Python"=Library \texttt{scikit-learn}\footnote{\url{https://scikit-learn.org/1.6/}} umgesetzt. Dafür wurde ein \texttt{MLP"-Regressor} als Regressionsmodell ausgewählt. Dieses erlaubt unter anderem das überwachte Lernen von nicht"=-linearen Zusammenhängen, wie sie aus den Daten von \autoref{sec:measurements-dezibot-angle} angedeutet sind. Weiterhin ist es durch die Anzahl von versteckten Schichten (\emph{Hidden Layer}) anpassbar~\cite{scikit-learndevelopers117NeuralNetwork2025}. Diese wurde nach ein paar Experimenten auf $(20,20)$ festgesetzt, d.h. jeweils 20~Neuronen in der ersten und zweiten Schicht mit insgesamt zwei versteckten Schichten.
+Das Training wurde mit der Python"=Library \texttt{scikit-learn}\footnote{\url{https://scikit-learn.org/1.6/}} umgesetzt. Dafür wurde ein \texttt{MLP"-Regressor} als Regressionsmodell ausgewählt. Dieses erlaubt unter anderem das überwachte Lernen von nicht"=-linearen Zusammenhängen, wie sie aus den Daten von \autoref{sec:measurements-dezibot-angle} angedeutet sind. Weiterhin ist es durch die Anzahl von versteckten Schichten (\emph{Hidden Layer}) anpassbar~\cite{scikit-learndevelopers117NeuralNetwork2025}. Diese wurde nach ein paar Experimenten auf $(20,20)$ festgesetzt, d.h. jeweils 20~Neuronen in der ersten und zweiten Schicht mit insgesamt zwei versteckten Schichten. Das entsprechende Jupyter"=Notebook kann ebenfalls auf GitHub\footnote{\url{https://github.com/embedded-chess/misc/blob/main/src/angle_determination_adjustment/mlp.ipynb}} eingesehen werden.
 
 Nach einer zufälligen Aufteilung der Daten in Test"= und Trainingsdaten mit einer Aufteilung von 1:5 wurde das Modell trainiert. Nach verschiedenen Anläufen kamen die in \autoref{fig:cnn-mlp-diff} dargestellten Ergebnisse zustande.
 
@@ -409,11 +409,11 @@ Nach einer zufälligen Aufteilung der Daten in Test"= und Trainingsdaten mit ein
 
 Vor allem im Vergleich zu \autoref{fig:ir-signal-diff} ist zu erkennen, dass die Differenzen nun statt zwischen ungefähr -10° bis 10° zwischen -7,5° und 7,5° schwanken. Somit ist das Schwankungsintervall kleiner geworden. Da dieser Ansatz allerdings keine ausreichend gute Verbesserung brachte, wurde dieses Modell nicht in das Projekt integriert. Allerdings könnten weiterführende Experimente, bspw. an der Einstellung der Hyperparameter oder Wahl anderer Regressionsmodelle, durchgeführt werden.
 
-Das trainierte Modell wurde gespeichert und kann auf GitHub\footnote{\url{https://github.com/embedded-chess/doc/blob/main/plot/mlp_regressor_model_sensor_data.onnx}} abgerufen werden. Dieses ist im Standard von \emph{Open Neural Network Exchange} (ONNX)\footnote{\url{https://onnx.ai}} abgespeichert, welches in andere gängige Formate, wie bspw. von TensorFlow (Lite)~\cite{hyodoToolsConvertONNX2025, internationalbusinessmachinescorporationOnnxOnnxtensorflow2022}, umgewandelt werden kann. Somit kann es in Python, aber auch in C++ auf dem Dezibot verwendet werden~\cite{espressifsystemsEspressifEsptflitemicro2025,thetensorflowauthorsTanakamasayukiArduino_TensorFlowLite_ESP322022}, wie bspw. in~\citeauthor{antonovSnskorpion2DezibotLabyrinthSolver2025}~\cite{antonovSnskorpion2DezibotLabyrinthSolver2025}.
+Das trainierte Modell wurde gespeichert und kann auf GitHub\footnote{\url{https://github.com/embedded-chess/misc/blob/main/src/angle_determination_adjustment/mlp_regressor_model_sensor_data.onnx}} abgerufen werden. Dieses ist im Standard von \emph{Open Neural Network Exchange} (ONNX)\footnote{\url{https://onnx.ai}} abgespeichert, welches in andere gängige Formate, wie bspw. von TensorFlow (Lite)~\cite{hyodoToolsConvertONNX2025, internationalbusinessmachinescorporationOnnxOnnxtensorflow2022}, umgewandelt werden kann. Somit kann es in Python, aber auch in C++ auf dem Dezibot verwendet werden~\cite{espressifsystemsEspressifEsptflitemicro2025,thetensorflowauthorsTanakamasayukiArduino_TensorFlowLite_ESP322022}, wie bspw. in~\citeauthor{antonovSnskorpion2DezibotLabyrinthSolver2025}~\cite{antonovSnskorpion2DezibotLabyrinthSolver2025}.
 
-Ein weiterer Versuch bestand darin, statt eine MLP"=Regressors eine Support"=Vektor"=Maschine (SVM) als Regressor (\emph{Support Vector Regression}, \texttt{SVR}) zu verwenden. Die Ergebnisse waren jedoch schlechter als die bereits vorhande Implementierung (vgl. \autoref{sec:angle-determination}), weshalb dieser Ansatz verworfen wurde.
+Ein weiterer Versuch bestand darin, statt eine MLP"=Regressors eine Support"=Vektor"=Maschine (SVM) als Regressor (\emph{Support Vector Regression}, \texttt{SVR}) zu verwenden. Die Ergebnisse waren jedoch schlechter als die bereits vorhandene Implementierung (vgl. \autoref{sec:angle-determination}), weshalb dieser Ansatz verworfen wurde. 
 
-Ferner wurden die bestimmten Winkel vom Dezibot als Feature und die tatsächlichen Winkel als Label verwendet. Dieser Ansatz führte allerdings zu sehr ähnlichen Schwankungen wie in \autoref{sec:angle-determination}. Eine Ursache könnten die begrenzten Trainingsdaten sein. Insgesamt wurde sich daher entschieden, diesen Ansatz nicht weiter zu verfolgen.
+Ferner wurden die bestimmten Winkel vom Dezibot als Feature und die tatsächlichen Winkel als Label verwendet. Dies ist im oben genannten Jupyter"=Notebook enthalten. Dieser Ansatz führte allerdings zu sehr ähnlichen Schwankungen wie in \autoref{sec:angle-determination}. Eine Ursache könnten die begrenzten Trainingsdaten sein. Insgesamt wurde sich daher entschieden, diesen Ansatz nicht weiter zu verfolgen.
 
 
 \subsection{Iteration 5: Kalibrierung der Farben}
