--- a/plot/angle_adjustment/mlp.ipynb
+++ b/plot/angle_adjustment/mlp.ipynb
@@ -55,6 +55,7 @@
     "feature_matrix = np.array([north, east, south, west]).T\n",
     "X_train, X_test, y_train, y_test = train_test_split(feature_matrix, real, test_size=0.2)\n",
     "\n",
+    "# see https://github.com/embedded-chess/misc/blob/main/src/angle_determination_adjustment/mlp_regressor_model_sensor_data.skops\n",
     "model_file = 'mlp_sensor.skops'\n",
     "untrusted_types = sio.get_untrusted_types(file=model_file)\n",
     "model = sio.load(model_file, trusted=untrusted_types)"
