Update link to measurement csv.

--- a/article/content/appendix.tex
+++ b/article/content/appendix.tex
@@ -5,7 +5,7 @@
 
 Um die in \autoref{tab:measurements-dezibot-angle} aufgelisteten Werte so genau wie möglich zu messen, wurde ein eigenes 3D\hyphen gedrucktes Modell~\cite{felttipDezibotAlignmentPointer2025} entworfen. Dies vereinfacht das Ablesen der Winkel und verstärkt die Präzision.
 
-Die gemessenen Rohdaten (einzelne Sensorwerte sowie Winkel) können auf GitHub\footnote{\url{https://raw.githubusercontent.com/embedded-chess/doc/refs/heads/main/assets/measurements/angle_measurements.csv}} eingesehen werden. Die Winkel sind in \autoref{tab:measurements-dezibot-angle} tabellarisch sowie in \autoref{fig:measurements-dezibot-angle} grafisch dargestellt. Außerdem sind die Differenzen $\Delta\alpha$ sind in \autoref{fig:ir-signal-diff} grafisch aufbereitet.
+Die gemessenen Rohdaten (einzelne Sensorwerte sowie Winkel) können auf GitHub\footnote{\url{https://github.com/embedded-chess/misc/blob/main/src/angle_determination_adjustment/angle_measurements.csv}} eingesehen werden. Die Winkel sind in \autoref{tab:measurements-dezibot-angle} tabellarisch sowie in \autoref{fig:measurements-dezibot-angle} grafisch dargestellt. Außerdem sind die Differenzen $\Delta\alpha$ sind in \autoref{fig:ir-signal-diff} grafisch aufbereitet.
 
 \begin{table}[h!]
     \centering
