Add citation for ONNX format.

--- a/shared/bibliography.bib
+++ b/shared/bibliography.bib
@@ -143,6 +143,15 @@
   organization = {scikit-learn}
 }
 
+@online{scikit-learndevelopersModelPersistence2025,
+  title = {Model Persistence},
+  author = {{scikit-learn developers}},
+  date = {2025-02-24},
+  url = {https://scikit-learn/stable/model_persistence.html},
+  urldate = {2025-03-20},
+  langid = {english}
+}
+
 @software{thetensorflowauthorsTanakamasayukiArduino_TensorFlowLite_ESP322022,
   title = {Tanakamasayuki/{{Arduino}}\_{{TensorFlowLite}}\_{{ESP32}}},
   author = {{The TensorFlow Authors}},
