Add references to other projects.

--- a/shared/bibliography.bib
+++ b/shared/bibliography.bib
@@ -16,6 +16,14 @@
   version = {5.1}
 }
 
+@software{bruderMoseschmiedelDezibot2025,
+  title = {Moseschmiedel/Dezibot},
+  author = {Bruder, Julian and Schmiedel, Mose},
+  date = {2025},
+  url = {https://github.com/moseschmiedel/dezibot},
+  urldate = {2025-03-20}
+}
+
 @software{dezibotteamDezibotDezibot2025,
   title = {Dezibot/Dezibot},
   author = {{Dezibot Team}},
@@ -24,6 +32,15 @@
   url = {https://github.com/dezibot/dezibot},
   urldate = {2025-01-27},
   organization = {DEZIBOT}
+}
+
+@software{dietrichTimDietrichDezibotlogging2025,
+  title = {Tim-{{Dietrich}}/Dezibot-Logging},
+  author = {Dietrich, Tim and Herrling, Felix},
+  date = {2025},
+  origdate = {2025-01-19T11:48:28Z},
+  url = {https://github.com/Tim-Dietrich/dezibot-logging},
+  urldate = {2025-03-20}
 }
 
 @software{espressifsystemsEspressifEsptflitemicro2025,
@@ -121,6 +138,15 @@
   urldate = {2025-02-09},
   langid = {english},
   organization = {Matplotlib 3.10.0 documentation}
+}
+
+@software{richterCurvesHubDezibotDebugInterface2025,
+  title = {{{CurvesHub}}/{{DezibotDebugInterface}}},
+  author = {Richter, Jens and Sosedow, Tom},
+  date = {2025-02-23},
+  origdate = {2024-10-22T12:20:15Z},
+  url = {https://github.com/CurvesHub/DezibotDebugInterface},
+  urldate = {2025-03-20}
 }
 
 @online{ridpathTechniquesAccessibilityEvaluation2000,
