--- a/article/header/metadata.tex
+++ b/article/header/metadata.tex
@@ -21,5 +21,10 @@
 \hypersetup{
   % PDF metadata
   pdfauthor={Ines Rohrbach, Nico Schramm},
-  pdftitle={Embedded Chess Pieces}
+  pdftitle={Embedded Chess Pieces},
+  pdfsubject={Projekt-Dokumentation},
+  colorlinks = true,
+  urlcolor = magenta,
+  linkcolor = blue,
+  citecolor = red
 }
