Add infrared shadow caused by the legs.

--- a/article/content/movement.tex
+++ b/article/content/movement.tex
@@ -292,7 +292,14 @@ Dennoch sind einige Probleme aufgetreten, die im folgenden erläutert werden.
 
 % Problem: Unterschiede in IR-Sensoren
 
-Es ist problematisch, wenn die Messungen je nach Infrarot"=Sensor (herstellungsbedingt) abweichen. Dies kann beispielsweise durch äußere Einflüsse, wie Beschmutzungen der Sensoren, entstehen. Außerdem ist der Nord"=Sensor (vgl. \autoref{fig:dezibot-bottom}) neben einem Bein platziert, wodurch das Blickfeld verkleinert wird und ggf. Reflexionen entstehen. Ungenauigkeiten, die bei der Herstellung entstehen, können ggf. Messungenauigkeiten verursachen.
+Es ist problematisch, wenn die Messungen je nach Infrarot"=Sensor (herstellungsbedingt) abweichen. Dies kann beispielsweise durch äußere Einflüsse, wie Beschmutzungen der Sensoren, entstehen. Außerdem sind die Nord"= und Süd"=Sensoren (vgl. \autoref{fig:dezibot-bottom}) neben einem Bein platziert, wodurch das Blickfeld verkleinert wird und ggf. Schatten (vgl. \autoref{fig:dezibt-ir-shadow}) und somit blinde Flecken sowie ggf. Reflexionen entstehen. Ungenauigkeiten, die bei der Herstellung entstehen, können ggf. weitere Messungenauigkeiten verursachen.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth]{../assets/dezibot_ir_shadow.png}
+    \caption{Schatten, welche durch die Beine des Dezibots entstehen. Rechts ist ein Beacon"=Dezibot abgeschnitten zu sehen. Der südliche Infrarot"=Sensor ist in magenta hervorgehoben. (Infrarot"=Aufnahme)}
+    \label{fig:dezibt-ir-shadow}
+\end{figure}
 
 % Problem: IR-Sensoren nicht auf 90° platziert, off-axis
 
