--- a/article/content/movement.tex
+++ b/article/content/movement.tex
@@ -310,7 +310,7 @@ Dazu wurden zwei kleine, begrenzte Messstudien durchgeführt, die diese Tatsache
 \begin{figure}[h]
     \centering
     \includegraphics[width=\textwidth]{../plot/ir_signal_diff.pdf}
-    \caption{Diagramm der Differenz der Signal"=Messungen bezüglich des echten Winkels. Die Daten basieren auf \autoref{tab:measurements-dezibot-angle}.}
+    \caption{Diagramm der Differenz der Signal"=Messungen bezüglich des tatsächlichen Winkels. Daten basieren auf \autoref{tab:measurements-dezibot-angle}.}
     \label{fig:ir-signal-diff}
 \end{figure}
 
@@ -319,7 +319,7 @@ In der zweiten Messstudie wurde eine Infrarot"=basierte Links"= bzw. Rechts"=Rot
 \begin{table}[h]
     \centering
     \input{../assets/measurements/rotation_measurements_avg_dev.tex}
-    \caption{Durchschnittliche Differenzen vom Ziel"= und dem tatsächlich erreichten Winkel sowie Standardabweichungen der Messungen pro Rotationsart von Links"= (L) und Rechts"=Rotationen (R) basierend auf \autoref{tab:measurements-dezibot-angle}.}
+    \caption{Durchschnittliche Differenzen vom Ziel"= und dem tatsächlich erreichten Winkel sowie Standardabweichungen der Messungen pro Rotationsart von Links"= (L) und Rechts"=Rotationen (R) basierend auf den Daten aus \autoref{tab:measurements-dezibot-angle}.}
     \label{tab:measurements-dezibot-angle-avg-dev}
 \end{table}
 
