Hide colour links in toc.

--- a/article/main.tex
+++ b/article/main.tex
@@ -7,7 +7,10 @@
 \input{content/title_page.tex}
 
 \pagenumbering{gobble}
-\tableofcontents
+{
+    \hypersetup{hidelinks}
+    \tableofcontents
+}
 
 \newpage
 
